--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "ejs": "~2.2.3",
-    "express": "~4.11.1",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
-  }
+    "body-parser": "^1.10.2",
+    "cookie-parser": "^1.3.4",
+    "debug": "^2.1.2",
+    "ejs": "^2.2.4",
+    "express": "^4.11.2",
+    "morgan": "^1.5.1",
+    "pi-gpio": "0.0.6",
+    "serve-favicon": "^2.2.0",
+    "shortid": "^2.1.3"
+  },
+  "description": "node-based device contol for raspberry pi",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/eni23/raspicontrol.js.git"
+  },
+  "author": "Cyrill von Wattenwyl",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/eni23/raspicontrol.js/issues"
+  },
+  "homepage": "https://github.com/eni23/raspicontrol.js"
 }
