--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "body-parser": "^1.10.2",
@@ -11,6 +11,7 @@
     "debug": "^2.1.2",
     "ejs": "^2.2.4",
     "express": "^4.11.2",
+    "json-query": "^1.4.0",
     "morgan": "^1.5.1",
     "pi-gpio": "0.0.6",
     "serve-favicon": "^2.2.0",
