implemented api-keys

--- a/config.json
+++ b/config.json
@@ -28,46 +28,39 @@
       "color": "none"
     },
     {
-      "id": "Xk04_53_",
-      "name": "fubar",
-      "port": 2,
-      "icon": "none",
-      "color": "none"
-    },
-    {
-      "id": "mJ-rdqhO",
-      "name": "fubar",
-      "port": 2,
-      "icon": "none",
-      "color": "none"
-    },
-    {
-      "id": "7kB_dq3_",
-      "name": "dvgsdag",
-      "port": 2,
-      "icon": "agdsg",
-      "color": "agfd"
-    },
-    {
-      "id": "X144t53u",
-      "name": "",
+      "id": "myJTQo3_",
+      "name": "yfgh",
       "port": null,
-      "icon": "",
-      "color": ""
+      "icon": "fdh",
+      "color": "fdh"
     },
     {
-      "id": "71LEYq3d",
-      "name": "",
+      "id": "QJNJ4jhO",
+      "name": "yfgh",
       "port": null,
-      "icon": "",
-      "color": ""
+      "icon": "fdh",
+      "color": "fdh"
     },
     {
-      "id": "XJwEYc3_",
-      "name": "",
+      "id": "QJuxVsnu",
+      "name": "yfgh",
       "port": null,
-      "icon": "",
-      "color": ""
+      "icon": "fdh",
+      "color": "fdh"
+    },
+    {
+      "id": "X1eQ4i2d",
+      "name": "yfdh",
+      "port": null,
+      "icon": "fdha",
+      "color": "dfh"
+    },
+    {
+      "id": "7JAXNond",
+      "name": "yfdh",
+      "port": null,
+      "icon": "fdha",
+      "color": "dfh"
     }
   ],
   "switches": [
