--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-query": "^1.4.0",
     "morgan": "^1.5.1",
     "pi-gpio": "0.0.6",
+    "rekuire": "^0.1.9",
     "serve-favicon": "^2.2.0",
     "shortid": "^2.1.3"
   },
