--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "parent-require": "^1.0.0",
     "pi-gpio": "0.0.6",
     "rekuire": "^0.1.9",
+    "reminder": "^0.1.1",
     "serve-favicon": "^2.2.0",
-    "shortid": "^2.1.3"
+    "shortid": "^2.1.3",
+    "util": "^0.10.3"
   },
   "description": "node-based device contol for raspberry pi",
   "main": "app.js",
